--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "date-fns-tz": "^3.2.0",
     "electron": "^32.1.2",
     "firebase-admin": "^12.5.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
     "puppeteer": "^23.4.1",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2"
